--- a/src/ui/TallyDataProcessing.ui
+++ b/src/ui/TallyDataProcessing.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1602</width>
-    <height>1008</height>
+    <height>1044</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -73,7 +73,7 @@
            <string>Data processing</string>
           </attribute>
           <layout class="QGridLayout" name="gridLayout_29">
-           <item row="8" column="0">
+           <item row="10" column="0">
             <layout class="QGridLayout" name="gridLayout_7">
              <item row="0" column="1">
               <widget class="QGroupBox" name="groupBox_13">
@@ -765,7 +765,7 @@
              </item>
             </layout>
            </item>
-           <item row="9" column="0">
+           <item row="11" column="0">
             <spacer name="verticalSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
@@ -1273,14 +1273,14 @@
              </item>
             </layout>
            </item>
-           <item row="7" column="0">
+           <item row="9" column="0">
             <widget class="Line" name="line">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item row="7" column="0">
             <widget class="Line" name="line_2">
              <property name="frameShadow">
               <enum>QFrame::Sunken</enum>
@@ -1290,8 +1290,8 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="0">
-            <widget class="QGroupBox" name="groupBox_15">
+           <item row="8" column="0">
+            <widget class="QGroupBox" name="Normalizing_GB">
              <property name="font">
               <font>
                <weight>50</weight>
@@ -1584,6 +1584,26 @@ p, li { white-space: pre-wrap; }
                </layout>
               </item>
              </layout>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QCheckBox" name="Tally_Normalizing_CB">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Check for Tally normalizing</string>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="Line" name="line_5">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
             </widget>
            </item>
           </layout>
