--- a/src/ui/ExportSettings.ui
+++ b/src/ui/ExportSettings.ui
@@ -540,7 +540,7 @@
                </widget>
               </item>
               <item row="3" column="2">
-               <widget class="QLineEdit" name="Particles_Number">
+               <widget class="QLineEdit" name="Particles_Number_LE">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -2728,6 +2728,265 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tab_3">
+      <attribute name="title">
+       <string>Keff_Trigger</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_21">
+       <item row="0" column="1">
+        <widget class="QGroupBox" name="groupBox_3">
+         <property name="title">
+          <string/>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_20">
+          <item row="0" column="0">
+           <widget class="QPushButton" name="Add_Trigger_PB">
+            <property name="text">
+             <string>&gt;&gt;</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QGroupBox" name="groupBox_2">
+         <property name="title">
+          <string>Parameters</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_22">
+          <item row="0" column="0">
+           <layout class="QGridLayout" name="gridLayout_19">
+            <item row="2" column="1">
+             <widget class="QLabel" name="label_23">
+              <property name="text">
+               <string>Ignore zeros</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QLineEdit" name="Threshold_LE">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>30</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1">
+             <widget class="QLabel" name="label_22">
+              <property name="minimumSize">
+               <size>
+                <width>160</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Trigger max batches</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="3">
+             <widget class="QComboBox" name="Threshold_CB">
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>0</height>
+               </size>
+              </property>
+              <item>
+               <property name="text">
+                <string>E-8</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-7</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-6</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-5</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-4</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-3</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-2</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E-1</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>E+0</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="4" column="2" colspan="2">
+             <widget class="QLineEdit" name="Trigger_max_batches_LE">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>30</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QLabel" name="label_18">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Trigger active</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLabel" name="label_8">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Type</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="2" colspan="2">
+             <widget class="QComboBox" name="Trigger_Active_CB">
+              <item>
+               <property name="text">
+                <string>True</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>False</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="0" column="2" colspan="2">
+             <widget class="QComboBox" name="Type_CB">
+              <item>
+               <property name="text">
+                <string>std_dev</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>variance</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>rel_err</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_17">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Threshold</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="2" colspan="2">
+             <widget class="QComboBox" name="Zeroes_CB">
+              <item>
+               <property name="text">
+                <string>False</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>True</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+          <item row="0" column="1">
+           <spacer name="horizontalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
@@ -2740,7 +2999,7 @@
   <tabstop>LineEdit_1</tabstop>
   <tabstop>LineEdit_5</tabstop>
   <tabstop>Volume_Calc_CB</tabstop>
-  <tabstop>Particles_Number</tabstop>
+  <tabstop>Particles_Number_LE</tabstop>
   <tabstop>LineEdit_2</tabstop>
   <tabstop>Source_Surfaces_CB</tabstop>
   <tabstop>LineEdit_4</tabstop>
