--- a/src/ui/Interface.ui
+++ b/src/ui/Interface.ui
@@ -1124,41 +1124,7 @@
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="0">
-                 <widget class="QPushButton" name="pushButton">
-                  <property name="text">
-                   <string>&amp;Material Compositions</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <widget class="QPushButton" name="pushButton_2">
-                  <property name="text">
-                   <string>&amp;Defining Geometry</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="0">
-                 <widget class="QPushButton" name="pushButton_4">
-                  <property name="text">
-                   <string>Specifying &amp;Tallies</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="6" column="0">
-                 <spacer name="verticalSpacer_15">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item row="5" column="0">
                  <widget class="QComboBox" name="RunMode_CB">
                   <property name="layoutDirection">
                    <enum>Qt::LeftToRight</enum>
@@ -1193,6 +1159,50 @@
                     <string>Function to perform a keff search</string>
                    </property>
                   </item>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QPushButton" name="pushButton">
+                  <property name="text">
+                   <string>&amp;Material Compositions</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QPushButton" name="pushButton_2">
+                  <property name="text">
+                   <string>Defining &amp;Geometry</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QPushButton" name="pushButton_4">
+                  <property name="text">
+                   <string>Specifying &amp;Tallies</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="7" column="0">
+                 <spacer name="verticalSpacer_15">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item row="5" column="0">
+                 <widget class="QPushButton" name="pushButton_6">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="text">
+                   <string>&amp;Depletion Calculation</string>
+                  </property>
                  </widget>
                 </item>
                </layout>
@@ -1356,7 +1366,7 @@
      <x>0</x>
      <y>0</y>
      <width>1223</width>
-     <height>20</height>
+     <height>28</height>
     </rect>
    </property>
   </widget>
