--- a/src/ui/Interface.ui
+++ b/src/ui/Interface.ui
@@ -1198,7 +1198,7 @@
                 <item row="5" column="0">
                  <widget class="QPushButton" name="pushButton_6">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="text">
                    <string>&amp;Depletion Calculation</string>
